# xsystrace

./: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.ac  configure.in  notification.glade  xsystrace_2003.06.23.orig.tar.gz.delta  xsystrace_2003.06.23.orig.tar.gz.id  xsystrace_20030623.orig.tar.gz.delta  xsystrace_20030623.orig.tar.gz.id
debian/: .gitignore  changelog  control  copyright  manpages  rules  xsystrace.1
debian/patches/: 0001-main_c.patch  main_c.patch  series
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c
