## Process this file with automake to produce Makefile.in

SUBDIRS = src

EXTRA_DIST = \
	autogen.sh \
	notification.glade

pixmapsdir=$(pkgdatadir)/pixmaps

pixmaps_DATA = pixmaps/deny-always.xpm pixmaps/deny.xpm			\
	pixmaps/logo.xpm pixmaps/permit-always.xpm pixmaps/permit.xpm	\
	pixmaps/skull.xpm
